fixed overflowing base on mobile

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,7 +1,8 @@
 /* flush border right up against the viewport */
 html, body {
-  height: 100%;
+  min-height: 100%;
   margin: 0;
+  padding: 0;
 }
 
 /* draw a solid navy-blue border around the entire page */
